--- a/netify.toml
+++ b/netify.toml
@@ -1,4 +1,3 @@
 [build]
-  base = "frontend"
-  command = "npm ci && npm run build"
-  publish = "dist"
+  command = "cd frontend && npm ci && npm run build"
+  publish = "frontend/dist"
